syntax = "proto3";
package layer.oracle;

option go_package = "github.com/tellor-io/layer/x/oracle/types";

message AggregateReporter {
  string reporter = 1;
  uint64 power = 2;
  uint64 block_number = 3;
}

message RunningAggregate {
  string value = 1;
  uint64 crossover_weight = 2;
}
